themes/Adwaita/gtk-3.0/gtk.css
/* Default color scheme */
@define-color base_color #ffffff;
@define-color bg_color #ededed;
@define-color tooltip_bg_color #343434;
@define-color selected_bg_color #4a90d9;
@define-color text_color #2e3436;
@define-color fg_color #2e3436;
@define-color tooltip_fg_color #ffffff;
@define-color selected_fg_color #ffffff;
@define-color link_color #4a90d9;
@define-color frame_color #8a9580;
@define-color inactive_frame_color #c7ccc1;
@define-color warning_color #f57900;
@define-color error_color #cc0000;
@define-color success_color #4e9a06;

* {
    font: Cantarell;
    engine: adwaita;
    padding: 1;

    /* Style properties */
    -GtkButton-child-displacement-x: 1;
    -GtkButton-child-displacement-y: 1;
    -GtkButton-default-border: 0;
    -GtkButton-image-spacing: 4;
    -GtkButton-interior-focus: true;
    -GtkToolButton-icon-spacing: 4;
    -GtkWidget-focus-padding: 2;

    -GtkCheckButton-indicator-size: 14;

    -GtkTextView-error-underline-color: #cc0000;

    -GtkPaned-handle-size: 6;

    /* The size for scrollbars. The slider is 2px smaller, but we keep it
     * up so that the whole area is sensitive to button presses for the
     * slider. The stepper button is larger in both directions, the slider
     * only in the width
     */

    -GtkScrolledWindow-scrollbar-spacing: 0;
    -GtkScrolledWindow-scrollbars-within-bevel: 1;


    -GtkMenuBar-internal-padding: 0;
    -GtkExpander-expander-size: 16;      /* ??? */
    -GtkToolbar-internal-padding: 4;     /* ??? */
    -GtkTreeView-expander-size: 14;      /* ??? */
    -GtkTreeView-vertical-separator: 0;  /* ??? */

    -GtkScale-slider-length: 15; /* ??? */
    -GtkScale-slider-width: 21; /* ??? */
    -GtkScale-trough-side-details: 1; /* ??? */


    -GtkMenu-horizontal-padding: 0;
    -GtkMenu-vertical-padding: 0;

    -GtkWidget-link-color: @link_color;
    -GtkWidget-visited-link-color: @link_color;
    -GtkIMHtml-hyperlink-color: @link_color;
    -GtkHTML-link-color: @link_color;

    -WnckTasklist-fade-overlay-rect: 0;

    -NautilusIconContainer-selection-box-color: @selected_bg_color;
    -NautilusIconContainer-dark-info-color: shade (@selected_bg_color, 0.6);
    -NautilusIconContainer-light-info-color: shade (@selected_fg_color, 0.6);
    -NautilusIconContainer-prelight-icon-color: #ffffff;
    -NautilusIconContainer-prelight-icon-brightness: 255;
    -NautilusIconContainer-selection-box-alpha: 0x40;
    -NautilusIconContainer-selection-highlight-alpha: 0x00;

    -GtkEntry-inner-border: 3;
    -GtkButton-inner-border: 3;
    -GtkEntry-progress-border: 0;

    -GtkSeparatorToolItem-shadow-type: none;

    /* Style */
    background-color: @bg_color;
    color: @fg_color;
    border-radius: 3;

    /* Engine settings */
    -adwaita-focus-fill-color: alpha (#71acea, 0.165);
    -adwaita-focus-border-color: #71acea;
}

*:hover {
    background-color: shade (@bg_color, 1.02);
    color: @fg_color;
}

*:selected {
    background-color: @selected_bg_color;
    color: @selected_fg_color;
}

*:insensitive {
    background-color: shade (@bg_color, 1.07);
    color: #a7aba7;
}

*:active {
    background-color: shade (@bg_color, 0.915);
}

.background {
    /* I like this huge gradient, but probably it would be better
    to have a fixed height gradient, not sure.*/
    /*background-image: -gtk-gradient (linear,
				     left top, left bottom,
				     from (shade (@bg_color, 0.94)),
				     to (@bg_color)); */
    border-style: none;
    border-width: 0;
    border-radius: 0;
}

/* Text Entries */
.entry {
    background-color: #fff;
    background-image: none;
    border-color: #579eea;
    border-radius: 3;
    border-width: 1;
    border-style: solid;
}

.entry:insensitive {
    background-color: #f4f4f2;
    border-color: #bcbfb7;
}

GtkSpinButton.button,
GtkSpinButton.button:insensitive,
GtkSpinButton.button:prelight,
GtkSpinButton.button:active {
    background-image: none;
    background-color: #fff;
    border-width: 1;
    border-style: none;
    padding: 0;
}

GtkFrame,
GtkCalendar,
GtkScale {
    padding: 2;
}

.frame {
    font: bold;
    color: lighter (@fg_color);
    border-style: none;
    border-width: 0;
}

.cell {
    background-color: @base_color;
    color: @text_color;
}

.cell:selected {
    background-color: @selected_bg_color;
}

/* Notebooks/Tabs */

.notebook {
    -adwaita-selected-tab-color: #8dc0f3;
    background-color: shade (@bg_color, 1.12);
    padding: 2;
    border-style: solid;
    border-radius: 0;
    -GtkNotebook-tab-overlay: 10;
    -GtkNotebook-tab-curvature: 5;
}

.notebook tab {
    padding: 3;
    border-radius: 2;
}

.notebook tab:active {
    background-color: @base_color;
}

/* Scrollbars */

GtkScrollbar {
    padding: 1; /* ??? */
    background-image: none;
    border-style: solid;
    -GtkRange-arrow-scaling: 0.6;
    -GtkRange-slider-width: 18; /* seems affect the whole width of the scrollbar */
    -GtkRange-stepper-size: 20; /* height on vertical and width on horizontal siders */
    -GtkScrollbar-min-slider-length: 30; /* minimum size for the slider. sadly can't be in '.slider' where it belongs */
}

GtkScrollbar.trough {
    background-color: shade (@bg_color, 0.9);
    border-width: 0;
    border-radius: 0;
    /* non uniform borders don't work
    border: 1px solid @frame_color;
    border-left: 1px solid shade (@bg_color, 0.9);
    */
}

GtkScrollbar.slider, GtkScrollbar.button {
    background-image: none;
    background-color: lighter (@bg_color);
    border-color: #a7aba7;
    border-width: 1;
    border-radius: 3;
    padding: 0;
}

GtkScrollbar.slider:prelight,
GtkScrollbar.button:prelight {
    background-image: none;
    background-color: lighter (@bg_color);
    border-color: @frame_color;
}

GtkScrollbar.slider:prelight:active,
GtkScrollbar.button:prelight:active {
    background-image: none;
    border-color: @selected_bg_color;
}
/* ... */

